[gd_scene load_steps=42 format=3 uid="uid://ca4vq225py3jt"]

[ext_resource type="Script" uid="uid://bgfcb8bkxcbnd" path="res://scripts/npc.gd" id="1_abqhh"]
[ext_resource type="Texture2D" uid="uid://diw8d1w7wpjur" path="res://art/character/Human-Worker-Red.png" id="1_nh2m4"]
[ext_resource type="PackedScene" uid="uid://bgk3f6tiisdnc" path="res://scenes/dialogue.tscn" id="3_rv78h"]
[ext_resource type="PackedScene" uid="uid://bxpjtnwx74n5" path="res://scenes/npc_quest.tscn" id="4_7n8xq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_abqhh"]
atlas = ExtResource("1_nh2m4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv78h"]
atlas = ExtResource("1_nh2m4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n8xq"]
atlas = ExtResource("1_nh2m4")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wlns"]
atlas = ExtResource("1_nh2m4")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl2vt"]
atlas = ExtResource("1_nh2m4")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwkja"]
atlas = ExtResource("1_nh2m4")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tygy"]
atlas = ExtResource("1_nh2m4")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sptji"]
atlas = ExtResource("1_nh2m4")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4e37"]
atlas = ExtResource("1_nh2m4")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1h837"]
atlas = ExtResource("1_nh2m4")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl1un"]
atlas = ExtResource("1_nh2m4")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuru7"]
atlas = ExtResource("1_nh2m4")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyaq3"]
atlas = ExtResource("1_nh2m4")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf2ql"]
atlas = ExtResource("1_nh2m4")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gbmn"]
atlas = ExtResource("1_nh2m4")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvipr"]
atlas = ExtResource("1_nh2m4")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0klm"]
atlas = ExtResource("1_nh2m4")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2tho"]
atlas = ExtResource("1_nh2m4")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca6vw"]
atlas = ExtResource("1_nh2m4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8u8m"]
atlas = ExtResource("1_nh2m4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d56e8"]
atlas = ExtResource("1_nh2m4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewlk4"]
atlas = ExtResource("1_nh2m4")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bw2c7"]
atlas = ExtResource("1_nh2m4")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gc4mq"]
atlas = ExtResource("1_nh2m4")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gr28"]
atlas = ExtResource("1_nh2m4")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkdcp"]
atlas = ExtResource("1_nh2m4")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_15fp6"]
atlas = ExtResource("1_nh2m4")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bll4x"]
atlas = ExtResource("1_nh2m4")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_46t2e"]
atlas = ExtResource("1_nh2m4")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8ld7"]
atlas = ExtResource("1_nh2m4")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwdfw"]
atlas = ExtResource("1_nh2m4")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1ua7"]
atlas = ExtResource("1_nh2m4")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hjb1"]
atlas = ExtResource("1_nh2m4")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub7sa"]
atlas = ExtResource("1_nh2m4")
region = Rect2(128, 192, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fdkk8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_abqhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv78h")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7n8xq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wlns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl2vt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwkja")
}],
"loop": true,
"name": &"walk_e",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tygy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sptji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4e37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1h837")
}],
"loop": true,
"name": &"walk_n",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl1un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuru7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyaq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf2ql")
}],
"loop": true,
"name": &"walk_ne",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gbmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvipr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0klm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2tho")
}],
"loop": true,
"name": &"walk_nw",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca6vw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8u8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d56e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewlk4")
}],
"loop": true,
"name": &"walk_s",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bw2c7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gc4mq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gr28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkdcp")
}],
"loop": true,
"name": &"walk_se",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_15fp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bll4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46t2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8ld7")
}],
"loop": true,
"name": &"walk_sw",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwdfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1ua7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hjb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub7sa")
}],
"loop": true,
"name": &"walk_w",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_iwn7c"]
radius = 6.08276

[sub_resource type="CircleShape2D" id="CircleShape2D_8x8lr"]
radius = 15.0

[node name="npc" type="CharacterBody2D"]
script = ExtResource("1_abqhh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fdkk8")
animation = &"idle"
frame_progress = 0.63121

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_iwn7c")

[node name="chat_detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chat_detection_area"]
shape = SubResource("CircleShape2D_8x8lr")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="dialogue" parent="." instance=ExtResource("3_rv78h")]
offset_top = 0.0
offset_bottom = 40.0

[node name="npcQuest" parent="." instance=ExtResource("4_7n8xq")]

[connection signal="body_entered" from="chat_detection_area" to="." method="_on_chat_detection_area_body_entered"]
[connection signal="body_exited" from="chat_detection_area" to="." method="_on_chat_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="d_finished" from="dialogue" to="." method="_on_dialogue_d_finished"]
[connection signal="quest_menu_closed" from="npcQuest" to="." method="_on_npc_quest_quest_menu_closed"]
